# analist_inisghts

./: .env.example  .gitignore  README.md  pyproject.toml
cursor/: cursor.json
data/: 0-60000_retries_1.parquet  1-500.parquet  10001-12000.parquet  1001-3000.parquet  100999-102998.parquet  102999-104998.parquet  104001-106000.parquet  104999-106998.parquet  106999-108998.parquet  108001-110000.parquet  108999-110998.parquet  11000-12999.parquet  110999-112998.parquet  112001-114000.parquet  112999-114998.parquet  114001-116000.parquet  114999-116998.parquet  116001-118000.parquet  116999-118998.parquet  118001-120000.parquet  118999-120998.parquet  120001-122000.parquet  12001-14000.parquet  120999-122998.parquet  122001-124000.parquet  122999-124998.parquet  124001-126000.parquet  124999-126998.parquet  126001-128000.parquet  126999-128998.parquet  128999-130998.parquet  13000-14999.parquet  130001-132000.parquet  130999-132998.parquet  132999-134998.parquet  134001-136000.parquet  134999-136998.parquet  136001-138000.parquet  136999-138998.parquet  138001-140000.parquet  (+155 more)
dataset/: 1-2000.parquet  100001-102000.parquet  102001-104000.parquet  106001-108000.parquet  110001-112000.parquet  128001-130000.parquet  132001-134000.parquet  14001-16000.parquet  142001-144000.parquet  144001-146000.parquet  148001-150000.parquet  156001-158000.parquet  16001-18000.parquet  162001-164000.parquet  164001-166000.parquet  170001-172000.parquet  174001-176000.parquet  178001-180000.parquet  180001-182000.parquet  182001-184000.parquet  184001-186000.parquet  186001-188000.parquet  (+83 more)
(+33 files in other folders)
